<resources>
    <string name="app_name">tpDevMobil</string>
    <string name="calculatrice">Calculatrice</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="x">x</string>
    <string name="divide">/</string>
    <string name="delete"><![CDATA[<--]]></string>
    <string name="equal">=</string>
    <string name="flux_rss">Flux RSS</string>
    <string name="HOME"/>
    <string name="home">HOME</string>
    <string name="test_image_title">title</string>
    <string name="test_image_date">image_date</string>
    <string name="description_image">image</string>
    <string name="test_image_description">image_description</string>
    <string name="image_precedente">image_prec</string>
    <string name="image_suivante">image_suiv</string>
</resources>