<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="match_parent"
                                                   android:layout_gravity="bottom"
>

    <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button4"/>
    <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button5"/>
    <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/button6" app:layout_constraintEnd_toStartOf="@+id/buttonDel"
            android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toStartOf="@+id/button5" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button7"/>
    <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toStartOf="@+id/button6" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button8"/>
    <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/button9" app:layout_constraintEnd_toStartOf="@+id/buttonMult"
            android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toStartOf="@+id/button8" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlus"/>
    <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/button0" app:layout_constraintEnd_toStartOf="@+id/button9"
            android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/buttonMinus" app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
            android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="667dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonEqual" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/button0"
            android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus" android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="307dp" app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"/>
    <Button
            android:id="@+id/buttonMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="307dp" app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/buttonDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="307dp" app:layout_constraintBottom_toTopOf="@+id/buttonMult"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/screenText"
            android:layout_width="406dp"
            android:layout_height="96dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toTopOf="@+id/button2"/>
</androidx.constraintlayout.widget.ConstraintLayout>